# pocketscion-configurator

./: .gitignore  Cargo.toml  README.md  namespace.sh  namespace_config.json
src/: main.rs
