[package]
name = "pocketscion-configurator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
ipnet = { version = "2.11.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pocketscion = "0.4.0"
rand = "0.9.2"
rand_chacha = { version = "0.9", features = ["serde"] }
scion-proto = "0.4.0"
snap-tokens = "0.4.0"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
